--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,6 +52,22 @@ layout: default
 
                 <hr>
 
+
+
+                <div class="bdsharebuttonbox">
+                    <a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>
+                    <a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a>
+                    <a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
+                    <a href="#" class="bds_twi" data-cmd="twi" title="分享到Twitter"></a>
+                    <a href="#" class="bds_fbook" data-cmd="fbook" title="分享到Facebook"></a>
+                    <a href="#" class="bds_linkedin" data-cmd="linkedin" title="分享到linkedin"></a>
+
+                </div>
+
+
+
+
+
                 {% if site.duoshuo_share && site.duoshuo_username %}
                 <!-- 多说 Share start -->
                 </style>
@@ -190,6 +206,26 @@ layout: default
 <!-- disqus 公共JS代码 end -->
 {% endif %}
 
+                <script>
+                 window._bd_share_config = {
+                "common": {
+                "bdSnsKey": {},
+                "bdText": "",
+                "bdMini": "2",
+                "bdMiniList": false,
+                "bdPic": "",
+                "bdStyle": "2",
+                "bdSize": "16"
+                },
+                "share": {}
+                };
+                with(document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];
+                </script>
+
+
+
+
+
 
 {% if site.anchorjs %}
 <!-- async load function -->
@@ -226,3 +262,4 @@ layout: default
     }
 </style>
 {% endif %}
+
