百度统计增加 寻找正确显示标签方法

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,4 +38,14 @@
 
     <!-- ga & ba script hoook -->
     <script></script>
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "//hm.baidu.com/hm.js?d66050042306e97144edf5d467901e1b";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
 </head>
