更新四篇博文

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -83,16 +83,15 @@ layout: default
                 </div>
                 <!-- 多说 Share end-->
                 {% endif %}
-
+                <!-- 百度分享 start-->
                 <div class="bdsharebuttonbox">
-                <a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>
-                <a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a>
                 <a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
                 <a href="#" class="bds_twi" data-cmd="twi" title="分享到Twitter"></a>
                 <a href="#" class="bds_fbook" data-cmd="fbook" title="分享到Facebook"></a>
                 <a href="#" class="bds_linkedin" data-cmd="linkedin" title="分享到linkedin"></a>
+                <a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a>
                 </div>
-
+                <!-- 百度分享 end-->
 
 
 
@@ -266,4 +265,3 @@ layout: default
     }
 </style>
 {% endif %}
-
